# DDPCodeGen

./: .gitignore  CMakeLists.txt  README.md  cartpole.ipynb  hexacopter.ipynb  pendubot.ipynb
.ipynb_checkpoints/: cartpole-checkpoint.ipynb  hexacopter-checkpoint.ipynb  pendubot-checkpoint.ipynb
autogenu/: animation_generator.py  autogenu.py  simulation_plottor.py  symbolic_functions.py
ddpcodegen/: animation_generator.py  ddpcodegen.py  simulation_plottor.py  symbolic_functions.py
include/: DDP.hpp  NMPC.hpp  integrator.hpp  memory_manager.hpp  simulation_data_saver.hpp  simulator.hpp
models/cartpole/: CMakeLists.txt  main.cpp  ocp_model.cpp  ocp_model.hpp
models/hexacopter/: ocp_model.cpp  ocp_model.hpp
models/pendubot/: ocp_model.cpp  ocp_model.hpp
src/: DDP.cpp  memory_manager.cpp  simulation_data_saver.cpp
